--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.6",
     "i18next": "^23.16.4",
     "react": "^18.3.1",
