add product and product order in db

--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -8,7 +8,10 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.6",
+    "@xyflow/react": "^12.3.4",
+    "axios": "^1.7.7",
     "i18next": "^23.16.4",
+    "localtunnel": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -46,5 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:9090"
 }
