--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -18,6 +18,7 @@
     "react-i18next": "^15.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^3.0.2",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.0"
   },
