--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^6.1.6",
     "@xyflow/react": "^12.3.4",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.11",
     "i18next": "^23.16.4",
     "localtunnel": "^2.0.2",
     "react": "^18.3.1",
