--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.6",
+    "@mui/x-data-grid": "^7.22.2",
     "@xyflow/react": "^12.3.4",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
