--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -15,12 +15,14 @@
     "i18next": "^23.16.4",
     "localtunnel": "^2.0.2",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.0.2",
+    "react-trello": "^2.2.11",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.0"
   },
