--- a/pos-restaurant-service/.env
+++ b/pos-restaurant-service/.env
@@ -2,7 +2,7 @@ PORT=9090
 
 # DB CONFIG
 DB_HOST=localhost
-DB_NAME=posdb
+DB_NAME=MyRestaurantJefferSakon
 DB_USER=root
 DB_PASSWORD=nathee2024
 DB_PORT=3306
