--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.1.0",
+    "react-moment": "^1.1.3",
     "react-pageflip": "^2.0.3",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
