split mysql connection 2 port

--- a/pos-restaurant-service/.env
+++ b/pos-restaurant-service/.env
@@ -1,8 +1,15 @@
 PORT=9090
 
-# DB CONFIG
+# DB POS CONFIG
+MYSQL5_DB_HOST=127.0.0.1
+MYSQL5_DB_NAME=MyRestaurantJefferSakon
+MYSQL5_DB_USER=root
+MYSQL5_DB_PASSWORD=nathee2024
+MYSQL5_DB_PORT=3306
+
+# DB NEW POS CONFIG
 DB_HOST=localhost
-DB_NAME=MyRestaurantJefferSakon
+DB_NAME=posdb
 DB_USER=root
 DB_PASSWORD=nathee2024
 DB_PORT=3306
