--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -7,6 +7,7 @@
     "watch": "nodemon ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -16,7 +17,9 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "promptpay-qr": "^0.5.0",
     "pug": "2.0.0-beta11",
+    "qrcode": "^1.5.4",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
