update mysql5 conntected

--- a/pos-restaurant-service/.env
+++ b/pos-restaurant-service/.env
@@ -1,11 +1,11 @@
 PORT=9090
 
 # DB POS CONFIG
-MYSQL5_DB_HOST=127.0.0.1
+MYSQL5_DB_HOST=192.168.1.197
 MYSQL5_DB_NAME=MyRestaurantJefferSakon
-MYSQL5_DB_USER=root
-MYSQL5_DB_PASSWORD=nathee2024
-MYSQL5_DB_PORT=3306
+MYSQL5_DB_USER=admin
+MYSQL5_DB_PASSWORD="P@ssword!#"
+MYSQL5_DB_PORT=3310
 
 # DB NEW POS CONFIG
 DB_HOST=localhost
