--- a/pos-restaurant-2024/public/manifest.json
+++ b/pos-restaurant-2024/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "POS Restaurant",
+  "name": "POS Restaurant",
   "icons": [
     {
       "src": "favicon.ico",
