--- a/pos-restaurant-service/.env
+++ b/pos-restaurant-service/.env
@@ -1,6 +1,7 @@
 PORT=9090
 
 # DB POS CONFIG
+IS_OLD_MYSQL5=true
 MYSQL5_DB_HOST=softpda.homeftp.net
 MYSQL5_DB_NAME=MyRestaurantJefferSakon
 MYSQL5_DB_USER=admin
