--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "local": "nodemon --env-file=.env.local ./bin/www",
     "watch": "nodemon ./bin/www"
   },
   "dependencies": {
