--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
