--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.6",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.6",
+    "@mui/styled-engine-sc": "^6.1.8",
+    "@mui/x-charts": "^7.22.3",
     "@mui/x-data-grid": "^7.22.2",
     "@xyflow/react": "^12.3.4",
     "axios": "^1.7.7",
