--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -36,7 +36,8 @@
     "@testing-library/user-event": "^13.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "SET PORT=3333 && react-scripts start",
+    "local": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
