--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "node-thermal-printer": "^4.4.3",
     "promptpay-qr": "^0.5.0",
     "pug": "2.0.0-beta11",
     "qrcode": "^1.5.4",
