--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -23,6 +23,7 @@
     "promptpay-qr": "^0.5.0",
     "pug": "2.0.0-beta11",
     "qrcode": "^1.5.4",
+    "receiptline": "^1.16.1",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
