inventory stock out

--- a/pos-restaurant-service/.env
+++ b/pos-restaurant-service/.env
@@ -2,16 +2,16 @@ PORT=9090
 
 # DB POS CONFIG
 IS_OLD_MYSQL5="Y"
-# MYSQL5_DB_HOST1=softpda.homeftp.net
-MYSQL5_DB_HOST=192.168.1.197
+MYSQL5_DB_HOST1=softpda.homeftp.net
+# MYSQL5_DB_HOST=192.168.1.197
 MYSQL5_DB_NAME=MyRestaurantJefferSakon
 MYSQL5_DB_USER=admin
 MYSQL5_DB_PASSWORD="P@ssword!#"
 MYSQL5_DB_PORT=3310
 
 # DB NEW POS CONFIG
-# DB_HOST1=softpda.homeftp.net
-DB_HOST=192.168.1.111
+DB_HOST1=softpda.homeftp.net
+# DB_HOST=192.168.1.111
 DB_NAME=posdb
 DB_USER=root
 DB_PASSWORD="P@ssword!#"
