can add stcard with new balance success

--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "local": "nodemon --env-file=.env.local ./bin/www",
+    "local2": "node --trace-warnings --env-file=.env.local ./bin/www",
     "watch": "nodemon ./bin/www"
   },
   "dependencies": {
