--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -14,6 +14,7 @@
     "@xyflow/react": "^12.3.4",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
+    "http-proxy-middleware": "^3.0.3",
     "i18next": "^23.16.4",
     "localtunnel": "^2.0.2",
     "react": "^18.3.1",
@@ -59,6 +60,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:9090"
+  }
 }
