--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -10,7 +10,8 @@
     "@mui/material": "^6.1.6",
     "@mui/styled-engine-sc": "^6.1.8",
     "@mui/x-charts": "^7.22.3",
-    "@mui/x-data-grid": "^7.22.2",
+    "@mui/x-data-grid": "^7.23.0",
+    "@mui/x-data-grid-generator": "^7.23.0",
     "@xyflow/react": "^12.3.4",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
