--- a/pos-restaurant-service/.env.prod
+++ b/pos-restaurant-service/.env.prod
@@ -1,4 +1,5 @@
 PORT=9090
+CONVERT_LATIN_UTF="Y"
 
 # DB POS CONFIG
 IS_OLD_MYSQL5="Y"
@@ -7,6 +8,14 @@ MYSQL5_DB_NAME=MyRestaurantJefferSakon
 MYSQL5_DB_USER=admin
 MYSQL5_DB_PASSWORD="P@ssword!#"
 MYSQL5_DB_PORT=3310
+
+# DB POS CRM CONFIG
+IS_OLD_MYSQL5_CRM="Y"
+MYSQL5_CRM_DB_HOST=softpda.homeftp.net
+MYSQL5_CRM_DB_NAME=mycrmbranch
+MYSQL5_CRM_DB_USER=admin
+MYSQL5_CRM_DB_PASSWORD="P@ssword!#"
+MYSQL5_CRM_DB_PORT=3310
 
 # DB NEW POS CONFIG
 DB_HOST=softpda.homeftp.net
