--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -15,6 +15,7 @@
     "@mui/x-data-grid-generator": "^7.23.0",
     "@xyflow/react": "^12.3.4",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.11.11",
     "http-proxy-middleware": "^3.0.3",
     "i18next": "^23.16.4",
