--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -13,6 +13,7 @@
     "@mui/x-charts": "^7.22.3",
     "@mui/x-data-grid": "^7.23.0",
     "@mui/x-data-grid-generator": "^7.23.0",
+    "@mui/x-date-pickers": "^7.23.0",
     "@xyflow/react": "^12.3.4",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
@@ -20,6 +21,7 @@
     "http-proxy-middleware": "^3.0.3",
     "i18next": "^23.16.4",
     "localtunnel": "^2.0.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
