--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -2,3 +2,4 @@ DESKTOP=MacOSX
 MACNO=001
 WEB_HOSTING=http://localhost:3000
 SERVICE_HOST=http://localhost:9090
+REACT_APP_SERVICE_HOST=http://localhost:9090
