--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -1,5 +1,4 @@
 DESKTOP=MacOSX
 MACNO=001
 WEB_HOSTING=http://localhost:3000
-SERVICE_HOST=http://localhost:9090
-REACT_APP_SERVICE_HOST=http://localhost:9090
+SERVICE_HOST=http://localhost:9090/api
