--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -43,6 +43,7 @@
     "@testing-library/user-event": "^13.2.1",
     "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
+    "electron-is-dev": "^3.0.1",
     "electron-packager": "^17.1.2"
   },
   "scripts": {
@@ -52,7 +53,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron": "electron .",
-    "package": "electron-packager ."
+    "package": "electron-packager .",
+    "dist": "electron-builder"
   },
   "eslintConfig": {
     "extends": [
@@ -71,5 +73,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "build": {
+    "appId": "newpos.softpos.co.th",
+    "productName": "pos-restaurant-2024",
+    "directories": {
+      "output": "dist"
+    }
   }
 }
