--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -3,3 +3,6 @@ MACNO=001
 WEB_HOSTING=http://localhost:3333
 SERVICE_HOST=http://localhost:9090/api
 REACT_APP_BASE_URL=http://localhost:9090
+REACT_APP_API_USER=admin
+REACT_APP_API_KEY=supersecret
+REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
