--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^7.23.0",
     "@xyflow/react": "^12.3.4",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.11",
     "http-proxy-middleware": "^3.0.3",
