--- a/pos-restaurant-service/.env.prod
+++ b/pos-restaurant-service/.env.prod
@@ -23,3 +23,8 @@ DB_NAME=posdb
 DB_USER=root
 DB_PASSWORD="P@ssword!#"
 DB_PORT=3311
+
+# APIs
+WEB_USER_AUTH=admin
+WEB_USER_PASS=supersecret
+API_SECRET_PASS=XkhZG4fW2t2W
