--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -12,9 +12,11 @@
     "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-basic-auth": "^1.2.1",
     "http-errors": "~1.6.3",
     "moment": "^2.30.1",
     "morgan": "~1.9.1",
