--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -25,9 +25,11 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.1.0",
+    "react-idle-timer": "^5.7.2",
     "react-moment": "^1.1.3",
     "react-number-format": "^5.4.2",
     "react-pageflip": "^2.0.3",
