--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -13,10 +13,11 @@
     "@mui/x-charts": "^7.22.3",
     "@mui/x-data-grid": "^7.23.0",
     "@mui/x-data-grid-generator": "^7.23.0",
-    "@mui/x-date-pickers": "^7.23.0",
+    "@mui/x-date-pickers": "^7.23.3",
     "@xyflow/react": "^12.3.4",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.11",
     "http-proxy-middleware": "^3.0.3",
