--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -41,6 +41,7 @@
     "react-to-print": "^3.0.2",
     "react-trello": "^2.2.11",
     "styled-components": "^6.1.13",
+    "uuid": "^11.0.5",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
