--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
