--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -19,6 +19,8 @@
     "express": "~4.16.1",
     "express-basic-auth": "^1.2.1",
     "http-errors": "~1.6.3",
+    "kafka-node": "^5.0.0",
+    "kafkajs": "^2.2.4",
     "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
