--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -7,3 +7,4 @@ REACT_APP_API_USER=admin
 REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
 BFF_API_HOST=http://192.168.1.60:9090/api
+WEB_PORT=80
