--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
+    "canvas": "^3.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-network": "^3.0.0-alpha.5",
     "express": "~4.16.1",
     "express-basic-auth": "^1.2.1",
     "http-errors": "~1.6.3",
+    "iconv-lite": "^0.6.3",
     "kafka-node": "^5.0.0",
     "kafkajs": "^2.2.4",
     "moment": "^2.30.1",
@@ -30,6 +34,7 @@
     "pug": "2.0.0-beta11",
     "qrcode": "^1.5.4",
     "receiptline": "^1.16.1",
+    "utf8": "^3.0.0",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
