--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "5.0.1",
     "react-to-print": "^3.0.2",
     "react-trello": "^2.2.11",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "uuid": "^11.0.5",
     "web-vitals": "^2.1.0"
