--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -34,6 +34,7 @@
     "pug": "2.0.0-beta11",
     "qrcode": "^1.5.4",
     "receiptline": "^1.16.1",
+    "socket.io": "^4.8.1",
     "utf8": "^3.0.0",
     "uuid": "^11.0.2"
   },
