update env file

--- a/pos-restaurant-service/.env
+++ b/pos-restaurant-service/.env
@@ -28,3 +28,6 @@ DB_PORT=3311
 WEB_USER_AUTH=admin
 WEB_USER_PASS=supersecret
 API_SECRET_PASS=XkhZG4fW2t2W
+
+# SOCKET.IO
+SOCKETIO_CLIENT_ACCEPT=http://192.168.1.197:3333
