--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -8,3 +8,5 @@ REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
 BFF_API_HOST=http://192.168.1.60:9090/api
 WEB_PORT=80
+REACT_APP_SOCKETIO_SERVER=http://localhost:9090
+PORT=3333
