--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -52,11 +52,12 @@
     "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
     "electron-is-dev": "^3.0.1",
-    "electron-packager": "^17.1.2"
+    "electron-packager": "^17.1.2",
+    "env-cmd": "^10.1.0"
   },
   "scripts": {
-    "start": "SET PORT=3333 && react-scripts start",
-    "local": "react-scripts start",
+    "start": "env-cmd -f ./.env react-scripts start",
+    "local": "env-cmd -f ./.env.local react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
