--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "local": "nodemon --env-file=.env.local ./bin/www",
-    "local2": "node --trace-warnings --env-file=.env.local ./bin/www",
-    "watch": "nodemon ./bin/www"
+    "local:watch": "node --trace-warnings --env-file=.env.local ./bin/www",
+    "start:watch": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.20.3",
