--- a/food-ordering-app/package.json
+++ b/food-ordering-app/package.json
@@ -15,6 +15,7 @@
     "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
