--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -1,12 +1,12 @@
 DESKTOP=MacOSX
 MACNO=001
-WEB_HOSTING=http://localhost:3333
-SERVICE_HOST=http://localhost:9090/api
-REACT_APP_BASE_URL=http://localhost:9090
+WEB_HOSTING=http://192.168.1.197:3333
+SERVICE_HOST=http://192.168.1.197:9090/api
+REACT_APP_BASE_URL=http://192.168.1.197:9090
 REACT_APP_API_USER=admin
 REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
-BFF_API_HOST=http://192.168.1.60:9090/api
+BFF_API_HOST=http://192.168.1.197:9090/api
 WEB_PORT=80
-REACT_APP_SOCKETIO_SERVER=http://localhost:9090
+REACT_APP_SOCKETIO_SERVER=http://192.168.1.197:9090
 PORT=3333
