--- a/pos-restaurant-service/.env
+++ b/pos-restaurant-service/.env
@@ -29,5 +29,7 @@ WEB_USER_AUTH=admin
 WEB_USER_PASS=supersecret
 API_SECRET_PASS=XkhZG4fW2t2W
 
-# SOCKET.IO
-SOCKETIO_CLIENT_ACCEPT=http://192.168.1.197:3333
+# BOOKING INTEGRATION
+BOOKING_API_HOST=https://demo17.demodigihypedesign.com/wp-json
+BOOKING_API_KEY=ck_9774d4bd980494bd81409edf64581b010b688232
+BOOKING_API_SECRET=cs_b518af0e51df821a40ecc7a51e573af621b0d2d3
