--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -1,6 +1,7 @@
 DESKTOP=MacOSX
 MACNO=001
 WEB_HOSTING=http://192.168.1.197:3333
+REACT_APP_CUSTOMER_HOSTING=http://192.168.1.197:3001
 SERVICE_HOST=http://192.168.1.197:9090/api
 REACT_APP_BASE_URL=http://192.168.1.197:9090
 REACT_APP_API_USER=admin
