add center server for socket io

--- a/pos-restaurant-service/.env
+++ b/pos-restaurant-service/.env
@@ -1,4 +1,6 @@
 PORT=9090
+NODE_ENV=production
+
 CONVERT_LATIN_UTF="Y"
 
 # DB POS CONFIG
@@ -18,10 +20,10 @@ MYSQL5_CRM_DB_PASSWORD="P@ssword!#"
 MYSQL5_CRM_DB_PORT=3310
 
 # DB NEW POS CONFIG
-DB_HOST=192.168.1.111
+DB_HOST=192.168.1.197
 DB_NAME=posdb
 DB_USER=root
-DB_PASSWORD="P@ssword!#"
+DB_PASSWORD="nathee2024"
 DB_PORT=3311
 
 # APIs
@@ -33,3 +35,5 @@ API_SECRET_PASS=XkhZG4fW2t2W
 BOOKING_API_HOST=https://demo17.demodigihypedesign.com/wp-json
 BOOKING_API_KEY=ck_9774d4bd980494bd81409edf64581b010b688232
 BOOKING_API_SECRET=cs_b518af0e51df821a40ecc7a51e573af621b0d2d3
+
+SOCKETIO_SERVER=http://192.168.1.197:8080
