--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -1,5 +1,5 @@
 DESKTOP=MacOSX
-MACNO=001
+REACT_APP_MACNO=999
 WEB_HOSTING=http://192.168.1.197:3333
 REACT_APP_CUSTOMER_HOSTING=http://192.168.1.197:3001
 SERVICE_HOST=http://192.168.1.197:9090/api
@@ -9,5 +9,5 @@ REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
 BFF_API_HOST=http://192.168.1.197:9090/api
 WEB_PORT=80
-REACT_APP_SOCKETIO_SERVER=http://192.168.1.197:9090
+REACT_APP_SOCKETIO_SERVER=http://192.168.1.197:8080
 PORT=3333
