--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www",
     "local": "nodemon --env-file=.env.local ./bin/www",
     "local:watch": "node --trace-warnings --env-file=.env.local ./bin/www",
-    "start:watch": "nodemon ./bin/www"
+    "start:watch": "nodemon ./bin/www",
+    "pm2": "pm2 start ./bin/www --name pos-restaurant-service"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "canvas": "^3.1.0",
+    "compression": "^1.7.5",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -22,6 +24,7 @@
     "escpos-network": "^3.0.0-alpha.5",
     "express": "~4.16.1",
     "express-basic-auth": "^1.2.1",
+    "helmet": "^8.0.0",
     "http-errors": "~1.6.3",
     "iconv-lite": "^0.6.3",
     "kafka-node": "^5.0.0",
