--- a/pos-bff-service/package.json
+++ b/pos-bff-service/package.json
@@ -4,7 +4,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start:web1": "node --env-file=.env.app01 server.js",
+    "start:web2": "node --env-file=.env.app02 server.js",
+    "start:web3": "node --env-file=.env.app03 server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "http-proxy": "^1.18.1"
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^3.0.3"
   }
 }
