--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -1,13 +1,8 @@
-DESKTOP=MacOSX
 REACT_APP_MACNO=999
-WEB_HOSTING=http://192.168.1.197:3333
-REACT_APP_CUSTOMER_HOSTING=http://192.168.1.197:3001
-SERVICE_HOST=http://192.168.1.197:9090/api
-REACT_APP_BASE_URL=http://192.168.1.197:9090
+REACT_APP_FOOD_ORDING_APP=http://192.168.1.197:3001
+REACT_APP_SERVICE_HOST=http://192.168.1.197:9090/api
 REACT_APP_API_USER=admin
 REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
-BFF_API_HOST=http://192.168.1.197:9090/api
-WEB_PORT=80
 REACT_APP_SOCKETIO_SERVER=http://192.168.1.197:8080
-PORT=3333
+PORT=3000
