--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -19,7 +19,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
-    "framer-motion": "^11.11.11",
+    "framer-motion": "^11.18.2",
     "http-proxy-middleware": "^3.0.3",
     "i18next": "^23.16.4",
     "localtunnel": "^2.0.2",
@@ -39,6 +39,7 @@
     "react-to-print": "^3.0.2",
     "react-trello": "^2.2.11",
     "socket.io-client": "^4.8.1",
+    "string-similarity": "^4.0.4",
     "styled-components": "^6.1.13",
     "uuid": "^11.0.5",
     "web-vitals": "^2.1.0"
