--- a/pos-restaurant-service/.env.sit
+++ b/pos-restaurant-service/.env.sit
@@ -5,22 +5,22 @@ CONVERT_LATIN_UTF="Y"
 
 # DB POS CONFIG
 IS_OLD_MYSQL5="Y"
-MYSQL5_DB_HOST=softerp.homeip.net
-MYSQL5_DB_NAME=MyRestaurant
-MYSQL5_DB_USER=root
-MYSQL5_DB_PASSWORD=""
+MYSQL5_DB_HOST=192.168.1.197
+MYSQL5_DB_NAME=MyRestaurantJefferSakon
+MYSQL5_DB_USER=admin
+MYSQL5_DB_PASSWORD="P@ssword!#"
 MYSQL5_DB_PORT=3310
 
 # DB POS CRM CONFIG
 IS_OLD_MYSQL5_CRM="Y"
-MYSQL5_CRM_DB_HOST=softerp.homeip.net
+MYSQL5_CRM_DB_HOST=192.168.1.197
 MYSQL5_CRM_DB_NAME=mycrmbranch
-MYSQL5_CRM_DB_USER=root
-MYSQL5_CRM_DB_PASSWORD=""
+MYSQL5_CRM_DB_USER=admin
+MYSQL5_CRM_DB_PASSWORD="P@ssword!#"
 MYSQL5_CRM_DB_PORT=3310
 
 # DB NEW POS CONFIG
-DB_HOST=softerp.homeip.net
+DB_HOST=192.168.1.197
 DB_NAME=posdb
 DB_USER=root
 DB_PASSWORD="nathee2024"
@@ -36,4 +36,4 @@ BOOKING_API_HOST=https://demo17.demodigihypedesign.com/wp-json
 BOOKING_API_KEY=ck_9774d4bd980494bd81409edf64581b010b688232
 BOOKING_API_SECRET=cs_b518af0e51df821a40ecc7a51e573af621b0d2d3
 
-SOCKETIO_SERVER=softerp.homeip.net:8080
+SOCKETIO_SERVER=http://192.168.1.197:8080
