--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -58,9 +58,9 @@
     "start": "env-cmd -f ./.env react-scripts start",
     "local": "env-cmd -f ./.env.local react-scripts start",
     "build": "react-scripts build",
-    "build:server1": "env-cmd -f ./.env.server1 react-scripts build && mv build app01",
-    "build:server2": "env-cmd -f ./.env.server2 react-scripts build && mv build app02",
-    "build:server3": "env-cmd -f ./.env.server3 react-scripts build && mv build app03",
+    "build:webapp1": "env-cmd -f ./.env.webapp1 react-scripts build && mv build webapp1",
+    "build:webapp2": "env-cmd -f ./.env.webapp2 react-scripts build && mv build webapp2",
+    "build:webapp3": "env-cmd -f ./.env.webapp3 react-scripts build && mv build webapp3",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron": "electron .",
