--- a/pos-printer-service/package.json
+++ b/pos-printer-service/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start:prtservice1": "node --env-file=.env.prtservice1 ./bin/www",
+    "start:prtservice2": "node --env-file=.env.prtservice2 ./bin/www",
+    "start:prtservice3": "node --env-file=.env.prtservice3 ./bin/www"
   },
   "dependencies": {
     "compression": "^1.7.5",
