--- a/pos-restaurant-2024/.env.webapp2
+++ b/pos-restaurant-2024/.env.webapp2
@@ -1,4 +1,8 @@
 REACT_APP_MACNO=001
-REACT_APP_FOOD_ORDING_APP=http://192.168.100.101:3335
-REACT_APP_SERVICE_HOST=http://192.168.100.101:9092/api
+REACT_APP_FOOD_ORDING_APP=http://192.168.1.165:3335
+REACT_APP_SERVICE_HOST=http://192.168.1.165:9092/api
+REACT_APP_API_USER=admin
+REACT_APP_API_KEY=supersecret
+REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
+REACT_APP_SOCKETIO_SERVER=http://192.168.1.165:8082
 PORT=3002
