--- a/pos-restaurant-2024/.env
+++ b/pos-restaurant-2024/.env
@@ -1,8 +1,8 @@
 REACT_APP_MACNO=999
-REACT_APP_FOOD_ORDING_APP=http://192.168.1.197:3000
-REACT_APP_SERVICE_HOST=http://192.168.1.197:9090/api
+REACT_APP_FOOD_ORDING_APP=http://localhost:3333
+REACT_APP_SERVICE_HOST=http://localhost:9090/api
 REACT_APP_API_USER=admin
 REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
-REACT_APP_SOCKETIO_SERVER=http://192.168.1.197:8080
+REACT_APP_SOCKETIO_SERVER=http://localhost:8080
 PORT=3000
