refactor code remove unused code

--- a/pos-restaurant-service/.env.service1
+++ b/pos-restaurant-service/.env.service1
@@ -36,4 +36,4 @@ BOOKING_API_HOST=https://demo17.demodigihypedesign.com/wp-json
 BOOKING_API_KEY=ck_9774d4bd980494bd81409edf64581b010b688232
 BOOKING_API_SECRET=cs_b518af0e51df821a40ecc7a51e573af621b0d2d3
 
-SOCKETIO_SERVER=http://localhost:8081
+SOCKETIO_SERVER=http://127.0.0.1:8081
