--- a/sync-thermal-service/databases.properties
+++ b/sync-thermal-service/databases.properties
@@ -8,11 +8,11 @@ new.db.name="posdb"
 crm.db.port=3306
 legacy.db.name="MyRestaurantJefferSakon"
 new.db.port=3306
-crm.db.host=localhost
+crm.db.host=127.0.0.1
 legacy.db.port=3306
-new.db.host=localhost
+new.db.host=127.0.0.1
 new.db.version=8
-legacy.db.host=localhost
+legacy.db.host=127.0.0.1
 crm.db.name="mycrmbranch"
 legacy.db.user=root
 crm.db.pass=j201ctlE0b80oRDjGPonzA\=\=
