--- a/pos-restaurant-service/package.json
+++ b/pos-restaurant-service/package.json
@@ -7,8 +7,8 @@
     "start:service1": "node --env-file=.env.service1 ./bin/www",
     "start:service2": "node --env-file=.env.service2 ./bin/www",
     "start:service3": "node --env-file=.env.service3 ./bin/www",
-    "local": "nodemon --env-file=.env.local ./bin/www",
-    "local:watch": "node --trace-warnings --env-file=.env.local ./bin/www",
+    "local": "node --env-file=.env.local ./bin/www",
+    "local:watch": "nodemon --trace-warnings --env-file=.env.local ./bin/www",
     "start:watch": "nodemon ./bin/www",
     "pm2": "pm2 start ./bin/www --name pos-restaurant-service"
   },
