--- a/sync-thermal-service/nbproject/project.properties
+++ b/sync-thermal-service/nbproject/project.properties
@@ -5,13 +5,9 @@ debug.test.modulepath=\
 file.reference.core-3.5.2.jar=../lib/core-3.5.2.jar
 file.reference.engine.io-client-2.1.0.jar=../lib/engine.io-client-2.1.0.jar
 file.reference.gson-2.11.0.jar=../lib/gson-2.11.0.jar
-file.reference.HikariCP-6.2.1.jar=../lib/HikariCP-6.2.1.jar
 file.reference.javase-3.5.2.jar=../lib/javase-3.5.2.jar
 file.reference.jbcrypt-0.4.jar=../lib/jbcrypt-0.4.jar
-file.reference.jcommander-1.82.jar=../lib/jcommander-1.82.jar
 file.reference.json-20090211.jar=../lib/json-20090211.jar
-file.reference.mysql-connector-j-9.2.0.jar=../lib/mysql-connector-j-9.2.0.jar
-file.reference.mysql-connector-java-5.1.18-bin.jar=../lib/mysql-connector-java-5.1.18-bin.jar
 file.reference.okhttp-3.12.12.jar=../lib/okhttp-3.12.12.jar
 file.reference.okio-1.15.0.jar=../lib/okio-1.15.0.jar
 file.reference.slf4j-api-2.0.0-alpha1.jar=../lib/slf4j-api-2.0.0-alpha1.jar
@@ -81,20 +77,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 javac.classpath=\
-    ${file.reference.HikariCP-6.2.1.jar}:\
     ${file.reference.engine.io-client-2.1.0.jar}:\
     ${file.reference.gson-2.11.0.jar}:\
     ${file.reference.jbcrypt-0.4.jar}:\
-    ${file.reference.json-20090211.jar}:\
-    ${file.reference.mysql-connector-j-9.2.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
     ${file.reference.okhttp-3.12.12.jar}:\
     ${file.reference.okio-1.15.0.jar}:\
     ${file.reference.slf4j-api-2.0.0-alpha1.jar}:\
     ${file.reference.socket.io-client-2.1.1.jar}:\
-    ${file.reference.core-3.5.2.jar}:\
     ${file.reference.javase-3.5.2.jar}:\
-    ${file.reference.jcommander-1.82.jar}
+    ${file.reference.core-3.5.2.jar}:\
+    ${file.reference.json-20090211.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
