--- a/pos-restaurant-2024/package.json
+++ b/pos-restaurant-2024/package.json
@@ -36,6 +36,7 @@
     "react-pageflip": "^2.0.3",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-simple-keyboard": "^3.8.51",
     "react-to-print": "^3.0.2",
     "react-trello": "^2.2.11",
     "socket.io-client": "^4.8.1",
