update customer order

--- a/customer-take-order/.env.prod
+++ b/customer-take-order/.env.prod
@@ -1,3 +1,6 @@
+PORT=3333
 REACT_APP_SERVICE_HOST=http://192.168.1.197:9090/api
 REACT_APP_SOCKETIO_SERVER=http://192.168.1.197:8080
-PORT=3333
+REACT_APP_API_USER=admin
+REACT_APP_API_KEY=supersecret
+REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
