--- a/pos-portal-service/package.json
+++ b/pos-portal-service/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "local": "node --env-file=.env.local ./bin/www",
+    "softpos": "node --env-file=.env.prod ./bin/www",
     "local:watch": "nodemon --trace-warnings --env-file=.env.local ./bin/www",
     "start:watch": "nodemon ./bin/www"
   },
