--- a/pos-restaurant/.env.prod
+++ b/pos-restaurant/.env.prod
@@ -4,4 +4,4 @@ REACT_APP_API_USER=admin
 REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
 REACT_APP_SOCKETIO_SERVER=http://192.168.1.197:8080
-REACT_APP_SERVICE_HOST=http://localhost:9090/api
+REACT_APP_SERVICE_HOST=http://192.168.1.197:9090/api
