--- a/pos-restaurant/package.json
+++ b/pos-restaurant/package.json
@@ -32,6 +32,7 @@
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.1.0",
     "react-idle-timer": "^5.7.2",
+    "react-input-mask": "^2.0.4",
     "react-moment": "^1.1.3",
     "react-number-format": "^5.4.2",
     "react-pageflip": "^2.0.3",
@@ -61,11 +62,13 @@
   "scripts": {
     "start": "react-scripts start",
     "local": "env-cmd -f ./.env.local react-scripts start",
+    "prod": "env-cmd -f ./.env.prod react-scripts start",
     "start:webapp1": "env-cmd -f ./.env.webapp1 react-scripts start",
     "start:webapp2": "env-cmd -f ./.env.webapp2 react-scripts start",
     "start:webapp3": "env-cmd -f ./.env.webapp3 react-scripts start",
     "build": "react-scripts build",
     "build:local": "env-cmd -f ./.env.local react-scripts build",
+    "build:prod": "env-cmd -f ./.env.prod react-scripts build",
     "build:webapp": "rm -rf webapp && react-scripts build && mv build server/webapp",
     "build:webapp1": "env-cmd -f ./.env.webapp1 react-scripts build && mv build webapp1",
     "build:webapp2": "env-cmd -f ./.env.webapp2 react-scripts build && mv build webapp2",
