--- a/customer-relation-management/package.json
+++ b/customer-relation-management/package.json
@@ -2,12 +2,14 @@
   "name": "customer-relation-management",
   "version": "0.1.0",
   "private": true,
+  "homepage": "crm-management",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
