--- a/pos-configuration/package.json
+++ b/pos-configuration/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pos-configuration",
   "version": "0.1.0",
+  "homepage": "pos-control",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -8,6 +9,7 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
