add retail sale pos page

--- a/pos-restaurant/.env.prod
+++ b/pos-restaurant/.env.prod
@@ -5,3 +5,4 @@ REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
 REACT_APP_SOCKETIO_SERVER=http://192.168.1.197:8080
 REACT_APP_SERVICE_HOST=http://192.168.1.197:9090/api
+REACT_APP_BASE_NAME=pos-restaurant
