--- a/pos-restaurant/.env.webapp3
+++ b/pos-restaurant/.env.webapp3
@@ -5,3 +5,4 @@ REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
 REACT_APP_SOCKETIO_SERVER=http://127.0.0.1:8083
 REACT_APP_SERVICE_HOST=http://127.0.0.1:9093/api
+REACT_APP_BASE_NAME=pos-restaurant
