prof concept discount item

--- a/sync-thermal-service/nbproject/project.properties
+++ b/sync-thermal-service/nbproject/project.properties
@@ -86,7 +86,8 @@ javac.classpath=\
     ${file.reference.socket.io-client-2.1.1.jar}:\
     ${file.reference.javase-3.5.2.jar}:\
     ${file.reference.core-3.5.2.jar}:\
-    ${file.reference.json-20090211.jar}
+    ${file.reference.json-20090211.jar}:\
+    ${libs.absolutelayout.classpath}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
