update defect and bug

--- a/pos-restaurant/package.json
+++ b/pos-restaurant/package.json
@@ -64,16 +64,17 @@
     "start": "react-scripts start",
     "local": "env-cmd -f ./.env.local react-scripts start",
     "prod": "env-cmd -f ./.env.prod react-scripts start",
+    "start:webapp": "env-cmd -f ./.env.webapp react-scripts start",
     "start:webapp1": "env-cmd -f ./.env.webapp1 react-scripts start",
     "start:webapp2": "env-cmd -f ./.env.webapp2 react-scripts start",
     "start:webapp3": "env-cmd -f ./.env.webapp3 react-scripts start",
     "build": "react-scripts build",
     "build:local": "env-cmd -f ./.env.local react-scripts build",
     "build:prod": "env-cmd -f ./.env.prod react-scripts build",
-    "build:webapp": "rm -rf webapp && react-scripts build && mv build server/webapp",
-    "build:webapp1": "env-cmd -f ./.env.webapp1 react-scripts build && mv build webapp1",
-    "build:webapp2": "env-cmd -f ./.env.webapp2 react-scripts build && mv build webapp2",
-    "build:webapp3": "env-cmd -f ./.env.webapp3 react-scripts build && mv build webapp3",
+    "build:webapp": "rm -rf server/webapp && env-cmd -f ./.env.webapp react-scripts build && mv build server/webapp",
+    "build:webapp1": "rm -rf server/webapp1 && env-cmd -f ./.env.webapp1 react-scripts build && mv build server/webapp1",
+    "build:webapp2": "rm -rf server/webapp2 && env-cmd -f ./.env.webapp2 react-scripts build && mv build server/webapp2",
+    "build:webapp3": "rm -rf server/webapp3 && env-cmd -f ./.env.webapp3 react-scripts build && mv build server/webapp3",
     "test": "react-scripts test",
     "start:electron": "electron .",
     "build:electron": "electron-builder",
