--- a/sync-thermal-service/nbproject/project.properties
+++ b/sync-thermal-service/nbproject/project.properties
@@ -2,6 +2,7 @@ debug.modulepath=\
     ${run.modulepath}
 debug.test.modulepath=\
     ${run.test.modulepath}
+file.reference.commons-net-3.11.1.jar=../lib/commons-net-3.11.1.jar
 file.reference.core-3.5.2.jar=../lib/core-3.5.2.jar
 file.reference.engine.io-client-2.1.0.jar=../lib/engine.io-client-2.1.0.jar
 file.reference.gson-2.11.0.jar=../lib/gson-2.11.0.jar
@@ -87,7 +88,8 @@ javac.classpath=\
     ${file.reference.javase-3.5.2.jar}:\
     ${file.reference.core-3.5.2.jar}:\
     ${file.reference.json-20090211.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-net-3.11.1.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
