update env process management

--- a/pos-portal-service/.env.prod
+++ b/pos-portal-service/.env.prod
@@ -25,4 +25,5 @@ BOOKING_API_HOST="https=//demo17.demodigihypedesign.com/wp-json",
 BOOKING_API_KEY="ck_9774d4bd980494bd81409edf64581b010b688232",
 BOOKING_API_SECRET="cs_b518af0e51df821a40ecc7a51e573af621b0d2d3",
 SOCKETIO_SERVER="http://192.168.1.197:8080"
+CUSTOMER_ORDER_HOST="http://192.168.1.197:3334"
 RECEIPT_FONT_FAMILY="Angsana New"
