--- a/pos-restaurant/.env.local
+++ b/pos-restaurant/.env.local
@@ -1,8 +1,7 @@
 REACT_APP_MACNO=001
-REACT_APP_FOOD_ORDING_APP=http://localhost:3333
 REACT_APP_API_USER=admin
 REACT_APP_API_KEY=supersecret
 REACT_APP_API_SECRET_PASS=XkhZG4fW2t2W
-REACT_APP_SOCKETIO_SERVER=http://localhost:8080
+REACT_APP_SOCKETIO_SERVER=http://192.168.1.197:8081
 REACT_APP_SERVICE_HOST=http://localhost:9090/api
 REACT_APP_BASE_NAME=pos-restaurant
