--- a/pos-restaurant/package.json
+++ b/pos-restaurant/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.18.2",
     "http-proxy-middleware": "^3.0.3",
     "i18next": "^23.16.4",
+    "js-cookie": "^3.0.5",
     "localtunnel": "^2.0.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -65,16 +66,10 @@
     "local": "env-cmd -f ./.env.local react-scripts start",
     "prod": "env-cmd -f ./.env.prod react-scripts start",
     "start:webapp": "env-cmd -f ./.env.webapp react-scripts start",
-    "start:webapp1": "env-cmd -f ./.env.webapp1 react-scripts start",
-    "start:webapp2": "env-cmd -f ./.env.webapp2 react-scripts start",
-    "start:webapp3": "env-cmd -f ./.env.webapp3 react-scripts start",
     "build": "react-scripts build",
     "build:local": "env-cmd -f ./.env.local react-scripts build",
     "build:prod": "env-cmd -f ./.env.prod react-scripts build",
     "build:webapp": "rm -rf server/webapp && env-cmd -f ./.env.webapp react-scripts build && mv build server/webapp",
-    "build:webapp1": "rm -rf server/webapp1 && env-cmd -f ./.env.webapp1 react-scripts build && mv build server/webapp1",
-    "build:webapp2": "rm -rf server/webapp2 && env-cmd -f ./.env.webapp2 react-scripts build && mv build server/webapp2",
-    "build:webapp3": "rm -rf server/webapp3 && env-cmd -f ./.env.webapp3 react-scripts build && mv build server/webapp3",
     "test": "react-scripts test",
     "start:electron": "electron .",
     "build:electron": "electron-builder",
