update discount for cupon special

--- a/pos-portal-service/package.json
+++ b/pos-portal-service/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www",
     "local": "node ./bin/www",
     "softpos": "node --env-file=.env.prod ./bin/www",
-    "local:watch": "nodemon --trace-warnings --env-file=.env.local ./bin/www",
+    "local:watch": "nodemon --trace-warnings ./bin/www",
     "start:watch": "nodemon ./bin/www"
   },
   "dependencies": {
