--- a/pos-restaurant/package.json
+++ b/pos-restaurant/package.json
@@ -23,7 +23,6 @@
     "express": "^4.21.2",
     "framer-motion": "^11.18.2",
     "http-proxy-middleware": "^3.0.3",
-    "i18next": "^23.16.4",
     "js-cookie": "^3.0.5",
     "localtunnel": "^2.0.2",
     "moment": "^2.30.1",
@@ -32,12 +31,12 @@
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-i18next": "^15.1.0",
     "react-idle-timer": "^5.7.2",
     "react-input-mask": "^2.0.4",
     "react-moment": "^1.1.3",
     "react-number-format": "^5.4.2",
     "react-pageflip": "^2.0.3",
+    "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-simple-keyboard": "^3.8.51",
