--- a/pos-portal-service/package.json
+++ b/pos-portal-service/package.json
@@ -29,6 +29,7 @@
     "iconv-lite": "^0.6.3",
     "kafka-node": "^5.0.0",
     "kafkajs": "^2.2.4",
+    "localtunnel": "^2.0.2",
     "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
