--- a/pos-portal-service/package.json
+++ b/pos-portal-service/package.json
@@ -7,7 +7,10 @@
     "local": "node ./bin/www",
     "softpos": "node --env-file=.env.prod ./bin/www",
     "local:watch": "nodemon --trace-warnings ./bin/www",
-    "start:watch": "nodemon ./bin/www"
+    "start:watch": "nodemon ./bin/www",
+    "test": "jest",
+    "test:converage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -34,6 +37,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "node-cache": "^5.1.2",
     "node-thermal-printer": "^4.4.3",
     "promptpay-qr": "^0.5.0",
     "pug": "2.0.0-beta11",
@@ -42,10 +46,14 @@
     "receiptline": "^1.16.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "swagger-ui-express": "^5.0.1",
     "utf8": "^3.0.0",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "winston": "^3.17.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "jest": "^30.0.4",
     "nodemon": "^3.1.7",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
